@@ -29,12 +29,12 @@ set -e
 . /etc/default/openmediavault
 . /usr/share/openmediavault/scripts/helper-functions
 
-OMV_IPTABLES_CONFIG=${OMV_IPTABLES_CONFIG:-"/etc/network/if-pre-up.d/iptables"}
+OMV_IPTABLES_CONFIG=${OMV_IPTABLES_CONFIG:-"/etc/network/if-pre-up.d/openmediavault-iptables"}
 
 cat <<EOF > ${OMV_IPTABLES_CONFIG}
 #!/bin/sh
-# ifpreup hook script for iptables
-# Generated by OpenMediaVault
+# This configuration file is auto-generated.
+# WARNING: Do not edit this file, your changes will be lost.
 
 iptables -t filter -F
 ip6tables -t filter -F
@@ -87,7 +87,9 @@ xmlstarlet sel -t \
 		  -i "starts-with(dport,'!')" -o "! " -b \
 		  -v "translate(translate(dport,'!',''),'-',':')" \
 	  -b \
-	  -v "concat(' -j ',action)" \
+	  -i "string-length(action) > 0" \
+		  -v "concat(' -j ',action)" \
+	  -b \
 	  -i "string-length(extraoptions) > 0" -v "concat(' ',extraoptions)" -b \
 	  -n \
   -b \
